# sm

./: .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
api_app/: main.py
api_app/api_v1/: __init__.py  crud.py  dependencies.py  schemas.py
api_app/api_v1/tweets/: crud.py  dependencies.py  schemas.py  views.py
api_app/api_v1/users/: crud.py  dependencies.py  schemas.py  views.py
api_app/core/: config.py
api_app/core/models/: __init__.py  base.py  db_helper.py  likes_table.py  media.py  tweet.py  user.py
client/: nginx.conf
tests/: conftest.py  schemas.py  test_root.py  test_tweets.py  test_user.py
tests/files_for_tests/: 3.txt
