[tool.poetry]
name = "\"micrblog\""
version = "0.1.0"
description = ""
authors = ["Evgeniy Kurdeev <EVGENIY45@yandex.ru>"]
license = "\"MIT\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.29" }
uvicorn = { extras = ["standsrt"], version = "^0.29.0" }
pydantic-settings = "^2.2.1"
aiofiles = "^23.2.1"
python-multipart = "^0.0.9"
werkzeug = "^3.0.2"
asyncpg = "^0.29.0"
fastapi = "^0.110.2"
testcontainers = "^4.4.0"
aiosqlite = "^0.20.0"
docker = "^7.0.0"
jsonschema = "^4.21.1"


[tool.poetry.group.dev.dependencies]
httpx = "^0.27.0"
pytest = "7.4.2"
trio = "^0.25.0"
pytest-asyncio = "0.21.1"
anyio = "3.7.1"
jsonschema = "^4.21.1"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test* *Tests"
addopts = "-vv -x"
asyncio_mode = "auto"
pythonpath = ["."]
